--- a/style.css
+++ b/style.css
@@ -5,10 +5,15 @@ body{
     font-family: sans-serif;
 }
 
-h2{
+h1{
     text-align: center;
     font-family: sans-serif;
     color: DarkCyan; 
+}
+
+h2{
+    font-family: sans-serif;
+    color: Black; 
 }
 
 h4{
