--- a/style.css
+++ b/style.css
@@ -35,8 +35,14 @@ ol li{
 }
 
 #navlist{ 
-    padding: 3px 0px;
+	position: fixed;	
+	left: 3px;
+	right: 3px;
+	top: 0px;
+	padding: 8px;
+	border-top: 2px solid black;
     border-bottom: 2px solid black;
+	background-color: Bisque;
     font: bold 16px Verdana, sans-serif; 
 }
 
@@ -58,10 +64,6 @@ ol li{
     color: white; 
     background: DarkSlateBlue; 
     border-color: black; 
-}
-
-#navlist li a#current{ 
-    background: red; 
 }
 
 @media (max-width: 1200px) {
