--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ ol li{
 	right: 3px;
 	top: 0px;
 	padding: 8px;
+	margin: 0.5px;
 	border-top: 2px solid black;
     border-bottom: 2px solid black;
 	background-color: Bisque;
